--- a/index.html
+++ b/index.html
@@ -25,15 +25,101 @@
   </head>
   <body>
     <a id="top"></a>
-    <header>
-    	<div class="topheader">
-    		<div class="topheader__left">
-    			<div class="topheader__menu"></div>
-    			<div class="topheader__email"></div>
-    		</div>
-    		<div class="topheader__right"></div>
-    	</div>
-    </header>
+    <div class="indexblock">
+    	<header id="header" class="header">
+	    	<div class="topheader">
+	    		<div class="container">
+	    			<div class="topheader__wrapper">
+			    		<div class="topheader__left">
+			    			<div class="topheader__links">
+			    				<div class="toplink"><a href="">Отель на природе в Подмосковье</a></div>
+			    				<div class="toplink"><a href="">Серпуховский р-н, д. Васильевское</a></div>
+			    				<div class="toplink">
+				    				<a href="mailto:hotel@dom-korabl.ru">
+				    					<img src="/images/mail.svg" alt="">
+				    					<span>hotel@dom-korabl.ru</span>
+				    				</a>
+				    			</div>	
+			    			</div>
+			    		</div>
+			    		<div class="topheader__right">
+			    			<a href="" class="callback link">ЗАКАЗАТЬ ЗВОНОК</a>
+			    			<a href="tel:89876543210" class="phone"><img src="/images/phone.svg" alt=""><span>8 987 654 32 10</span></a>
+			    		</div>
+			    	</div>
+		    	</div>
+	    	</div>
+	    	<div class="mainheader">
+	    		<div class="container">
+	    			<div class="mainheader__wrapper">
+			    		<div class="logo"><a href="/"><img src="/images/logo.svg" alt=""></a></div>
+				    		<div class="mainmenu">
+				    			<ul>
+				    				<li class="parent">
+				    					<a href="">Номера</a>
+				    					<ul class="submenu">
+				    						<li><a href="">Стандарт</a></li>
+				    						<li><a href="">Полулюкс</a></li>
+				    						<li><a href="">Люкс</a></li>
+				    						<li><a href="">Коттедж</a></li>
+				    						<li><a href="">Экодомик</a></li>
+				    					</ul>
+				    				</li>
+				    				<li class="active"><a href="">Услуги отеля</a></li>
+				    				<li><a href="">Отдых</a></li>
+				    				<li><a href="">Мероприятия</a></li>
+				    				<li><a href="">Кухня</a></li>
+				    				<li><a href="">Фотогалерея</a></li>
+				    				<li><a href="">Контакты</a></li>
+				    			</ul>
+				    		</div>
+	    					<div class="mainheader__button"><a href="#modal_1" data-toggle="modal" class="btn_border">Забронировать</a></div>
+	    			</div>
+	    		</div>
+	    		
+	    	</div>
+	    </header>
+	    <div class="indexcontent">
+	    	<div class="container">
+	    		<div class="indexcontent__wrapper">
+	    			<div class="indexcontent__content">
+	    				<div class="mainblock">
+	    					<div class="mainblock__name">ОТЕЛЬ ПРОВАНС</div>
+	    					<div class="mainblock__title">
+	    						<h1>Добро пожаловать, <br>в отель <mark>4 СЕЗОНА</mark></h1>
+	    					</div>
+	    					<div class="mainblock__form">
+	    						<form action="">
+	    							<div class="form form_row">
+	    								<div class="form__items">
+	    									<div class="form__item">
+	    										<input type="text" placeholder="Выберите даты" class="input-date datepicker-here">
+	    									</div>
+	    									<div class="form__item">
+	    										<input type="text" placeholder="Взрослых" class="input-persons">
+	    									</div>
+	    									<div class="form__item">
+	    										<input type="text" placeholder="Детей" class="input-childs">
+	    									</div>
+	    									<div class="form__item">
+	    										<button class="btn_main" type="submit">Рассчитать</button>
+	    									</div>
+	    								</div>
+	    							</div>
+	    						</form>
+	    					</div>
+	    					<div class="mainblock__video">
+	    						<a href="#">
+	    							<img src="/images/play.svg" alt="">
+	    							<span>Видео-экскурсия по отелю</span>
+	    						</a>
+	    					</div>
+	    				</div>
+	    			</div>
+	    		</div>
+	    	</div>
+	    </div>
+     </div>
     <main>	
 
     </main>
