--- a/index.html
+++ b/index.html
@@ -149,7 +149,93 @@
 	    </div>
      </div>
     <main>	
+    	<div class="pageblock">
+    		<div class="container">
+	    		<div class="blocktitle">
+	    			<h2>Отдых на природе рядом с <mark>Москвой</mark></h2>
+	    		</div>
+	    		<div class="imgtextrow">
+	    			<div class="imgtextrow__img">
+	    				<div class="galleryslider">
+	    					<div class="galleryslider__container">
+	    						<div class="galleryslider__slider">
+	    							<div class="galleryslider__slide">
+	    								<div class="galleryslider__img">
+	    									<img src="/images/image1.jpg" alt="">
+	    								</div>
+	    							</div>
+	    							<div class="galleryslider__slide">
+	    								<div class="galleryslider__img">
+	    									<img src="/images/image1.jpg" alt="">
+	    								</div>
+	    							</div>
+	    							<div class="galleryslider__slide">
+	    								<div class="galleryslider__img">
+	    									<img src="/images/image1.jpg" alt="">
+	    								</div>
+	    							</div>
+	    							<div class="galleryslider__slide">
+	    								<div class="galleryslider__img">
+	    									<img src="/images/image1.jpg" alt="">
+	    								</div>
+	    							</div>
+	    							<div class="galleryslider__slide">
+	    								<div class="galleryslider__img">
+	    									<img src="/images/image1.jpg" alt="">
+	    								</div>
+	    							</div>
+	    							
+	    						</div>
+	    						<div class="galleryslider__arrows">
+	    							<div class="arrowLeft">
+	    								<img src="/images/arrowLeft.svg" alt="">
+	    							</div>
+	    							<div class="arrowRight">
+	    								<img src="/images/arrowRight.svg" alt="">
+	    							</div>
+	    						</div>
+	    					</div>
+	    				</div>
+	    			</div>
+	    			<div class="imgtextrow__text">
+	    				<div class="textlimit">
+	    					<div class="textlimit__content">
+	    					<p>Прованс отель 4 сезона — первый атмосферный отель в стиле прованс. Дух загородной жизни, а значит, уют, простота и комфорт здесь присутствует во всем, Прованс — это не просто интерьерный стиль, это и философия, и образ жизни, и провинциальная умиротворяющая атмосфера, словом, все то, чего не сыскать в современных мегаполисах, и так не хватает городскому жителю.</p>
+	<p>Отель бережно воплощает самые лучшие черты стиля Прованс, чтобы создать уникальную атмосферу тихой французской провинции, отличающую данный отель от многих площадок. Созданный теплый провинциальный стиль по достоинству оценят самые взыскательные и требовательные гости: мягкие пастельные тона интерьеров, светлая патинированная мебель, массивные ключи от дверей, одноэтажные корпуса на 5 номеров и стильный холл с камином и видом на лес. Уютные коттеджи с выходом на пруд, где можно половить рыбу или просто созерцать природу и наслаждаться пением птиц. <br>А кто-то, возможно, вспомнит и золотые деньки из детства 	в гостях у бабушки.</p>
+	<p>Все прелести загородной жизни в интерьере и меню ресторана: натуральные соленья собственного изготовления, блюда из-под ножа, тепличные и фермерские продукты, ароматные специи. <br><br>Собственная выпечка хлеба, и отжим подсолнечного масла, отель может удивить дичью на столе. Комфортный и простой интерьер дополняют книжные полки с раритетными книгами, словно призывая уютно расположиться за столом, заказать ароматный чай и углубиться в чтение. <br><br>Отель находится в лесу, а значит — грибы, ягоды, белки, пение птиц, дробь дятла и шелест листвы — в ассортименте. <br><br>С провансом отель роднит красота пейзажа, обилие цветов, а теплый бассейн напомнит вам ласковое голубое море. И обязательно обратите внимание на часы в отеле. Везде словно застыло время — полдень. В данный отель возвращаются, потому что скучают.</p>
+								</div>
 
+	    				</div>
+	    			</div>
+	    		</div>
+    		</div>
+    	</div>
+
+    	<div class="fitchesblock">
+    		<div class="container">
+    			<div class="fitches">
+    				<div class="fitches__items">
+    					<div class="fitches__item">
+    						<div class="fitches__icon"><img src="/images/fitches1.svg" alt=""></div>
+    						<div class="fitches__text"><span>Круглосуточное <br>заселение в номера</span></div>
+    					</div>
+    					<div class="fitches__item">
+    						<div class="fitches__icon"><img src="/images/fitches2.svg" alt=""></div>
+    						<div class="fitches__text"><span>40 км <br>от МКАД</span></div>
+    					</div>
+    					<div class="fitches__item">
+    						<div class="fitches__icon"><img src="/images/fitches3.svg" alt=""></div>
+    						<div class="fitches__text"><span>Дополнительные <br>кровати в номерах</span></div>
+    					</div>
+    					<div class="fitches__item">
+    						<div class="fitches__icon"><img src="/images/fitches4.svg" alt=""></div>
+    						<div class="fitches__text"><span>Бесплатный Wi-Fi, <br>на всей территории</span></div>
+    					</div>
+    					
+    				</div>
+    			</div>
+    		</div>
+    	</div>
     </main>
     <footer class="footer" id="footer">
         <div class="container">
