--- a/index.html
+++ b/index.html
@@ -250,19 +250,19 @@
     		<div class="container">
     			<div class="fitches">
     				<div class="fitches__items row">
-    					<div class="fitches__item col-md-3 col-sm-3">
+    					<div class="fitches__item col-md-3 col-sm-3 col-xs-6">
     						<div class="fitches__icon"><img src="/images/fitches1.svg" alt=""></div>
     						<div class="fitches__text"><span>Круглосуточное <br>заселение в номера</span></div>
     					</div>
-    					<div class="fitches__item col-md-3 col-sm-3">
+                        <div class="fitches__item col-md-3 col-sm-3 col-xs-6">
     						<div class="fitches__icon"><img src="/images/fitches2.svg" alt=""></div>
     						<div class="fitches__text"><span>40 км <br>от МКАД</span></div>
     					</div>
-    					<div class="fitches__item col-md-3 col-sm-3">
+                        <div class="fitches__item col-md-3 col-sm-3 col-xs-6">
     						<div class="fitches__icon"><img src="/images/fitches3.svg" alt=""></div>
     						<div class="fitches__text"><span>Дополнительные <br>кровати в номерах</span></div>
     					</div>
-    					<div class="fitches__item col-md-3 col-sm-3">
+                        <div class="fitches__item col-md-3 col-sm-3 col-xs-6">
     						<div class="fitches__icon"><img src="/images/fitches4.svg" alt=""></div>
     						<div class="fitches__text"><span>Бесплатный Wi-Fi, <br>на всей территории</span></div>
     					</div>
@@ -339,8 +339,8 @@
     				<h2>Отдых в <mark>отеле</mark></h2>
     				<div class="pagetitle__descr">Наслаждайтесь отдыхом всей семьей и забудьте о суете большого города</div>
     			</div>
-    			<div class="row categories">
-    				<div class="col-md-3">
+    			<div class="row categories categories_small">
+    				<div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img6.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -349,7 +349,7 @@
     						</a>
     					</div>
     				</div>
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img7.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -358,7 +358,7 @@
     						</a>
     					</div>
     				</div>
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img8.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -367,7 +367,7 @@
     						</a>
     					</div>
     				</div>
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img9.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -376,7 +376,7 @@
     						</a>
     					</div>
     				</div>
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img10.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -385,7 +385,7 @@
     						</a>
     					</div>
     				</div>
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img11.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -395,7 +395,7 @@
     					</div>
     				</div>
     				
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img13.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -404,7 +404,7 @@
     						</a>
     					</div>
     				</div>
-    				<div class="col-md-3">
+                    <div class="col-md-3 col-sm-4 col-xs-6">
     					<div class="category" style="background-image: url(/images/img13.jpg)">
     						<a href="">
     							<span class="category__content">
@@ -545,7 +545,7 @@
 										<div class="contacts__text">Вы можете добраться на личном автомобиле, а также на автобусе или эллектричке из Москвы</div>
 									</div>
 									<div class="contacts__block">
-										<a href="#" target="_blank" class="btn_maps">Построить маршрут на <span class="ya">Я</span>ндекс <span class="ya_maps">Картах</span></a>
+										<a href="#" target="_blank" class="btn_maps"><span class="desktoponly">Построить</span> Маршрут на <span class="ya">Я</span>ндекс <span class="ya_maps">Картах</span></a>
 									</div>
 								</div>
 							</div>
@@ -694,7 +694,7 @@
 
             <div class="footer__end">
             	<div class="footer__info">©2021 Прованс-отель «4 сезона»</div>
-            	<div class="footer__info"><a href="">©2021 Прованс-отель «4 сезона»</a></div>
+            	<div class="footer__info"><a href="">Политика конфиденциальности</a></div>
             	<div class="footer__info">
             		<a href="">
             			<span>Сделано в</span>
