--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <li><a href="">Контакты</a></li>
                                 </ul>
                             </div>
-                            <div class="mainheader__button"><a href="#modal_1" data-toggle="modal" class="btn_border">Забронировать</a></div>
+                            <div class="mainheader__button"><a href="#modal_callback" data-toggle="modal" class="btn_border">Забронировать</a></div>
 
                             <div class="topheader__links mobileonly">
                                 <div class="toplink toplink_email">
@@ -706,9 +706,8 @@
         </div>
     </footer>
 
-    <a href="#modal_error" data-toggle="modal" class="btn_main">Успешно</a>
     <!-- Модальные окно - Заказать звонок -->
-    <div id="modal_1" class="modal fade">
+    <div id="modal_callback" class="modal fade">
       <div class="modal-dialog">
         <div class="modal-content">
           <button type="button" class="close"  data-dismiss="modal" aria-hidden="true">
