--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     				<h2>Фотогалерея</h2>
     				<div class="pagetitle__descr">Фото территории отеля, номеров и развлечений</div>
     			</div>
-    			<div class="photoslider">
+    			<div class="photoslider photoslider_nodots">
     				<div class="photoslider__container">
     					<div class="photoslider__slider">
     						<div class="photoslider__slide">
