--- a/hotel_number.html
+++ b/hotel_number.html
@@ -190,12 +190,12 @@
               <svg width="8" height="12" viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M6 2L2 6L6 10" stroke="#49A399" stroke-width="2" stroke-linecap="square"></path>
               </svg>
-              <span> Назад к номерам</span>
+              <span> Назад <span class="back_number">к номерам</span></span>
             </a>
 
             <a href="" class="play">
               <img src="/images/play2.svg" alt="">
-              <span>  3D тур номера</span>
+              <span>3D тур номера</span>
             </a>
           </div>
 
@@ -204,11 +204,32 @@
               <div class="detailimage">
                 <div class="detailimage__container sliderContainer">
                   <div class="detailimage__slider">
-                    <div class="detailimage__slide"><a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a></div>
-                    <div class="detailimage__slide"><a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a></div>
-                    <div class="detailimage__slide"><a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a></div>
-                    <div class="detailimage__slide"><a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a></div>
-                    <div class="detailimage__slide"><a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a></div>
+                    <div class="detailimage__slide">
+                      <div class="detailimage__image">
+                        <a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a>
+                      </div>
+                    </div>
+                     <div class="detailimage__slide">
+                      <div class="detailimage__image">
+                        <a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a>
+                      </div>
+                    </div>
+                     <div class="detailimage__slide">
+                      <div class="detailimage__image">
+                        <a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a>
+                      </div>
+                    </div>
+                     <div class="detailimage__slide">
+                      <div class="detailimage__image">
+                        <a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a>
+                      </div>
+                    </div>
+                     <div class="detailimage__slide">
+                      <div class="detailimage__image">
+                        <a href="/images/detail.jpg" data-lightbox="detail"><img src="/images/detail.jpg" alt=""></a>
+                      </div>
+                    </div>
+                    
                   </div>
                   <div class="galleryslider__arrows">
                     <div class="arrowLeft">
@@ -232,13 +253,13 @@
                 </div>
                 <div class="detailparam">
                   <div class="detailparam__icon">
-                    <img src="/images/detailparam1.svg" alt="">
+                    <img src="/images/detailparam2.svg" alt="">
                   </div>
                   <div class="detailparam__text">4 спальных мест</div>
                 </div>
                 <div class="detailparam">
                   <div class="detailparam__icon">
-                    <img src="/images/detailparam1.svg" alt="">
+                    <img src="/images/detailparam3.svg" alt="">
                   </div>
                   <div class="detailparam__text">48 кв.м</div>
                 </div>
