--- a/hotel_number.html
+++ b/hotel_number.html
@@ -276,7 +276,7 @@
         </div>
      
 
-          <div class="grayblock">
+          <div class="grayblock grayblock_icons">
             <div class="container">
               <div class="blockcaption">В стоимость проживания входит:</div>
                 <div class="iconitems">
@@ -382,7 +382,7 @@
           <div class="pageblock">
             <div class="container">
               <div class="blocktitle">
-            <h1>Другие форматы <mark>размещения</mark></h1>
+            <h2>Другие форматы <mark>размещения</mark></h2>
           </div>
 
          
@@ -601,8 +601,8 @@
             <div class="footer__cols">
             	<div class="footer__col footer__col_1">
             		<div class="footermenu">
-            			<div class="footermenu__title">Карта сайта</div>
-            			<div class="footermenu__links">
+            			<div class="footermenu__title active">Карта сайта</div>
+            			<div class="footermenu__links active">
             				<ul>
             					<li><a href="">Главная</a></li>
             					<li><a href="">Об отеле</a></li>
