--- a/modal.html
+++ b/modal.html
@@ -167,8 +167,8 @@
             <div class="footer__cols">
             	<div class="footer__col footer__col_1">
             		<div class="footermenu">
-            			<div class="footermenu__title">Карта сайта</div>
-            			<div class="footermenu__links">
+            			<div class="footermenu__title active">Карта сайта</div>
+            			<div class="footermenu__links active">
             				<ul>
             					<li><a href="">Главная</a></li>
             					<li><a href="">Об отеле</a></li>
