--- a/information_page.html
+++ b/information_page.html
@@ -120,7 +120,7 @@
 	    	</div>
 	    </header>
 	    <div class="pagebanner">
-        <div class="mainblock" style="background-image: url(/images/bg3.jpg)">
+        <div class="mainblock" style="background-image: url(/images/bg8.jpg)">
                 <div class="container">
                     <div class="mainblock__form">
             <form action="">
@@ -512,6 +512,41 @@
           </div>
         </div>
       </div>
+      <div class="mapblock">
+          <div class="container">
+            <div class="pagetitle pagetitle_signle">
+              <h2>Расположение <mark>отеля</mark></h2>
+            </div>
+          </div>  
+          <div class="map">
+            <div class="container">
+              <div class="contacts">
+                <div class="contacts__content">
+                  <div class="contacts__block">
+                    <div class="contacts__title">
+                      <img src="/images/location.svg" alt="">
+                      <span>Адрес</span>
+                    </div>
+                    <div class="contacts__text">Васильевское, Серпуховской район, Московская обл., Россия, 142271</div>
+                  </div>
+                  <div class="contacts__block">
+                    <div class="contacts__title">
+                      <img src="/images/pointer.svg" alt="">
+                      <span>На чем добраться?</span>
+                    </div>
+                    <div class="contacts__text">Вы можете добраться на личном автомобиле, а также на автобусе или эллектричке из Москвы</div>
+                  </div>
+                  <div class="contacts__block">
+                    <a href="#" target="_blank" class="btn_maps btn_maps_green"><span class="desktoponly">Построить</span> Маршрут на <span class="ya">Я</span>ндекс <span class="ya_maps">Картах</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7f1a956ac826de47d932934bd29af2686129ece4331ad080fe5e9ebd6aaf5718&amp;source=constructor" width="100%" height="600" frameborder="0"></iframe>
+            
+            
+          </div>
+        </div>
       <a href="#top" class="gotop scrollTo">
         <span>ПОДНЯТЬСЯ ВВЕРХ</span>
         <img src="/images/top.svg" alt="">
