--- a/start.html
+++ b/start.html
@@ -133,7 +133,8 @@
 	    			<li><a href="/hotel_number.html" target="_blank">Номер детальная</a></li>
 	    			<li><a href="/seo_event_page.html" target="_blank">Мероприятие</a></li>
                     <li><a href="/seo_vacation_page.html" target="_blank">Мероприятие 2</a></li>
-	    			<li><a href="/information_page.html" target="_blank">Способы оплаты</a></li>
+	    			<li><a href="/photos.html" target="_blank">Фотогалерея</a></li>
+                    <li><a href="/information_page.html" target="_blank">Способы оплаты</a></li>
 	    			<li><a href="" target="_blank"></a></li>
 	    			<li><a href="" target="_blank"></a></li>
 	    			<li><a href="" target="_blank"></a></li>
