--- a/photos.html
+++ b/photos.html
@@ -120,7 +120,7 @@
 	    	</div>
 	    </header>
 	    <div class="pagebanner">
-        <div class="mainblock" style="background-image: url(/images/bg3.jpg)">
+        <div class="mainblock" style="background-image: url(/images/bg7.jpg)">
                 <div class="container">
                     <div class="mainblock__form">
             <form action="">
@@ -200,7 +200,7 @@
             <div class="photo">
               <div class="photo__header tabs-js">
                 <div class="photoheader">
-                  <div class="photoheader__items">
+                  <div class="photoheader__items photoheader__items-slider">
                     <div class="photoheader__item active">
                       <div class="photoheader__content">Все</div>
                     </div>
