--- a/menu.html
+++ b/menu.html
@@ -236,7 +236,7 @@
               <h2>Меню <mark>ресторана</mark></h2>
             </div>
           
-            <div class="photo desktoponly">
+            <div class="photo pricelist_desktop">
               <div class="photo__header tabs-js">
                 <div class="photoheader">
                   <div class="photoheader__items photoheader__items-notslider">
