--- a/hotel_numbers.html
+++ b/hotel_numbers.html
@@ -14,15 +14,12 @@
     <link rel="stylesheet" type="text/css" href="/libs/fontawesome-free-5.15.3-web/css/solid.css" />
     <link rel="stylesheet" type="text/css" href="/css/slick.css" />
     <link rel="stylesheet" type="text/css" href="/css/slick-theme.css" />
-    <link rel="stylesheet" href="/css/animation.css" />
-    <link rel="stylesheet" href="/css/jquery.mCustomScrollbar.min.css" />
-    <link rel="stylesheet" href="/libs/lightbox/css/lightbox.min.css" />
-    <link href="/css/jQuery.Brazzers-Carousel.min.css" type="text/css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/t-datepicker.min.css">
-		<link rel="stylesheet" href="/css/themes/t-datepicker-main.css">
-<link rel="stylesheet" href="/css/themes/t-datepicker-orange.css">
-
+    <link rel="stylesheet" type="text/css" href="/css/jquery.mCustomScrollbar.min.css" />
+    <link rel="stylesheet" type="text/css" href="/libs/lightbox/css/lightbox.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/select2.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/t-datepicker.min.css">
+		<link rel="stylesheet" type="text/css" href="/css/themes/t-datepicker-main.css">
+    <link rel="stylesheet" type="text/css" href="/css/themes/t-datepicker-orange.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css?v=1.1" />
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -466,7 +463,7 @@
 			    				<a href="tel:89876543210" class="phone"><img src="/images/phone.svg" alt=""><span>8 987 654 32 10</span></a>
 			    			</div>
 			    			<div class="footer__callback">
-			    				<a href="#modal_1" data-toggle="modal" class="btn_border">Позвоните мне</a>	
+			    				<a href="#modal_callback" data-toggle="modal" class="btn_border">Позвоните мне</a>	
 			    			</div>
             	</div>
             </div>
@@ -672,13 +669,8 @@
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/maskedinput.js"></script>  
     <script src="/js/slick.min.js"></script>
-    <script src="/js/wow.min.js"></script>
-    <script src="/js/jQuery.Brazzers-Carousel.min.js"></script>
-    <script src="/js/wow.min.js"></script>
     <script src="/js/jquery.mCustomScrollbar.concat.min.js"></script>  
-    <script src="/js/sly.min.js"></script>  
-    <script src="/js/jquery-ui.js"></script>  
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script> 
+    <script src="/js/select2.min.js"></script> 
 		<script src="/js/t-datepicker.min.js"></script>
 		<script src="/libs/lightbox/js/lightbox.js" type="text/javascript"></script>
     <script src="/js/main.js"></script>
